--- a/MiniRisViewer.ServiceStatus/Views/ServiceStatusView.xaml
+++ b/MiniRisViewer.ServiceStatus/Views/ServiceStatusView.xaml
@@ -11,6 +11,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:md="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
     xmlns:prism="http://prismlibrary.com/"
+    xmlns:prismMetro="clr-namespace:Prism.Interactivity.MahAppsPack;assembly=Prism.Interactivity.MahAppsPack"
     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
     d:DataContext="{d:DesignInstance {x:Type local:ServiceStatusViewModel},
                                      IsDesignTimeCreatable=True}"
@@ -24,10 +25,6 @@
         <local1:DispButton x:Key="DispButton" />
         <local1:DispPause x:Key="DispPause" />
     </UserControl.Resources>
-
-    <!--<UserControl.DataContext>
-        <local:ServiceStatusViewModel />
-    </UserControl.DataContext>-->
 
     <xctk:BusyIndicator BusyContent="{Binding ProgressMessage.Value}" IsBusy="{Binding InProgress.Value}">
 
@@ -109,7 +106,16 @@
                         Margin="16,16,16,16"
                         Command="{Binding RestartServiceCommand}"
                         Content="全てのサービスを再起動" />
-                    <Button Command="{Binding ShowDialogMaterialCommand }" Content="ダイアログ表示" />
+                    <Button
+                        Margin="16,16,16,16"
+                        Command="{Binding NotificationCommand}"
+                        Content="ノーマルdialog" />
+
+                    <Button
+                        Margin="16,16,16,16"
+                        Command="{Binding RaiseMetroNotification}"
+                        Content="おしゃれdialog" />
+
 
                 </WrapPanel>
             </StackPanel>
@@ -118,9 +124,25 @@
 
     <i:Interaction.Triggers>
 
-        <prism:InteractionRequestTrigger SourceObject="{Binding NormalConfirmation}">
-            <prism:PopupWindowAction IsModal="True" WindowStartupLocation="CenterOwner" />
+        <!--  ノーマルdialog  -->
+        <prism:InteractionRequestTrigger SourceObject="{Binding NotificationRequest}">
+            <prism:PopupWindowAction IsModal="True" WindowStartupLocation="CenterOwner">
+                <prism:PopupWindowAction.WindowStyle>
+                    <Style TargetType="Window">
+                        <Setter Property="ResizeMode" Value="NoResize" />
+                        <Setter Property="SizeToContent" Value="WidthAndHeight" />
+                    </Style>
+                </prism:PopupWindowAction.WindowStyle>
+            </prism:PopupWindowAction>
         </prism:InteractionRequestTrigger>
+
+        <!--  おしゃれなdialog  -->
+        <prism:InteractionRequestTrigger SourceObject="{Binding MetroNotification}">
+            <prismMetro:PopupMetroWindowAction IsModal="True" WindowStartupLocation="CenterOwner" />
+        </prism:InteractionRequestTrigger>
+
     </i:Interaction.Triggers>
+
+
 
 </UserControl>
