--- a/MiniRisViewer/Views/MainWindow.xaml
+++ b/MiniRisViewer/Views/MainWindow.xaml
@@ -3,9 +3,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:prism="http://prismlibrary.com/"
-    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
     Title="{Binding Title}"
     Width="860"
     Height="600"
@@ -23,14 +23,20 @@
 
     <Grid>
         <ContentControl prism:RegionManager.RegionName="ContentRegion" />
-        <!--        <ContentControl Grid.ColumnSpan="2" prism:RegionManager.RegionName="ContentRegion" />        -->    
+        <!--        <ContentControl Grid.ColumnSpan="2" prism:RegionManager.RegionName="ContentRegion" />        -->
     </Grid>
 
-
     <i:Interaction.Triggers>
-
-        <prism:InteractionRequestTrigger SourceObject="{Binding NormalConfirmation}">
-            <prism:PopupWindowAction IsModal="True" WindowStartupLocation="CenterOwner" />
+        <prism:InteractionRequestTrigger SourceObject="{Binding TestNotificationRequest}">
+            <prism:PopupWindowAction IsModal="True" WindowStartupLocation="CenterOwner">
+                <prism:PopupWindowAction.WindowStyle>
+                    <Style TargetType="Window">
+                        <Setter Property="ResizeMode" Value="NoResize" />
+                        <Setter Property="SizeToContent" Value="WidthAndHeight" />
+                    </Style>
+                </prism:PopupWindowAction.WindowStyle>
+            </prism:PopupWindowAction>
         </prism:InteractionRequestTrigger>
     </i:Interaction.Triggers>
+
 </controls:MetroWindow>
